src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>text( Account.Account_Status__c )</formula>
        <inlineHelpText>This field is set on the Account level by HM</inlineHelpText>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biological_Sex__c</fullName>
        <description>User registration data passed by Helix Marketplace API.</description>
        <inlineHelpText>User registration data passed by Helix Marketplace API.</inlineHelpText>
        <label>Biological Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_BillTo__c</fullName>
        <description>To allow for Company in address</description>
        <inlineHelpText>To allow for Company in address</inlineHelpText>
        <label>Company(BillTo)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ShipTo__c</fullName>
        <description>To allow for Company in address</description>
        <inlineHelpText>To allow for Company in address</inlineHelpText>
        <label>Company(ShipTo)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by RedPoint</description>
        <inlineHelpText>Used by RedPoint</inlineHelpText>
        <label>Marketing Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Naturally_Black_Hair__c</fullName>
        <description>User registration data passed by Helix Marketplace API.</description>
        <inlineHelpText>User registration data passed by Helix Marketplace API.</inlineHelpText>
        <label>Naturally Black Hair?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by RedPoint</description>
        <inlineHelpText>Used by RedPoint</inlineHelpText>
        <label>Reminder Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sourcing_Exp_Date__c</fullName>
        <formula>IF(ISBLANK(Sourcing_Partner__c),null,

IF(AND(Month(DATEVALUE(CreatedDate) )=2,Day(DATEVALUE(CreatedDate))=29),
DATE(YEAR(DATEVALUE(CreatedDate)) + 2, Month(DATEVALUE(CreatedDate)),Day(DATEVALUE(CreatedDate))-1),
DATE(YEAR(DATEVALUE(CreatedDate)) + 2, Month(DATEVALUE(CreatedDate)),Day(DATEVALUE(CreatedDate)))
)

)</formula>
        <label>Sourcing Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sourcing_Partner_ID__c</fullName>
        <formula>Sourcing_Partner__r.Partner_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourcing Partner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourcing_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Account that brought in New Customer</description>
        <inlineHelpText>Partner Account that brought in New Customer</inlineHelpText>
        <label>Sourcing Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sourced Contacts</relationshipLabel>
        <relationshipName>Sourced_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stripe_Customer_ID__c</fullName>
        <description>DEPRECATED!!!   Used by HM if charge authorization has expired.</description>
        <inlineHelpText>DEPRECATED!!!   Used by HM if charge authorization has expired.</inlineHelpText>
        <label>Stripe Customer ID (DEPRECATED)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>userid__c</fullName>
        <description>User registration data passed by Helix Marketplace API.</description>
        <externalId>true</externalId>
        <inlineHelpText>User registration data passed by Helix Marketplace API.</inlineHelpText>
        <label>UserID</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Helix_B2B_Contact</fullName>
        <active>true</active>
        <description>Record type for standard B2B Contacts</description>
        <label>Helix B2B Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Helix_B2C_Contact</fullName>
        <active>true</active>
        <description>Record Type for Contacts who purchase through Helix Marketplace</description>
        <label>Helix B2C Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>